Fixing Mobile Issue
Fixing contact page being cut off at the bottom.

--- a/contact/contact.css
+++ b/contact/contact.css
@@ -3,9 +3,13 @@
   padding:0;
 }
 
+html {
+    height: 100%;
+}
 
 body {
   overflow: visible;
+   height: 100%;
 }
 
 header{
